made slides and video responsive

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -126,7 +126,7 @@
                         <div class="proj" id = "proj5" >
                             <a href="projects/internet.html">
                                 <img class="cap" alt="jump" src="assets/internet1.png"  />
-                                <div class = "overlay blur"> A project centered around answering the question "What is IS?And why should people care? This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience." </div>
+                                <div class = "overlay blur"> A project centered around answering the question "What is IS? And why should people care?" This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience. </div>
                             </a>
                             <div class="small-text no-blur">The Internet Age: Connecting Technology and People</div>
                         </div>
