--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -52,7 +52,7 @@
                  </div>
             </div>
          </section>
-         <div class="body-text"> 
+         <div class="body-text-big"> 
             <div class="video-embed">
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxRmU7IHI8UQhTyx5CT3V3uXEWeboC-blk1VGES1yfHz_teyRaUF9T8gnKhF5L0EPPciqeFUy-uB38/embed?start=false&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
