--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -38,7 +38,7 @@
         <section>
             <div class = "subhead">
                  <div class = "proj-title">
-                     The Internet Age.
+                     The Data Age.
                  </div>
                  <div class="desc-parent">
                      <div class="desc">
@@ -147,6 +147,9 @@ thoughts/concerns/comments
 
          <div class="body-text"> 
             <div class="subheading">Hi-Fi Wireframes</div>
+            <div class="description bold">
+                Iteration 1
+            </div>
             <div class="img-sections">
                 <img class="imgs" alt="internet-1" src="../assets/internet1.png" />
                 <img class="imgs" alt="internet-2" src="../assets/internet2.png" />
@@ -154,6 +157,14 @@ thoughts/concerns/comments
             <div class="img-sections">
                 <img class="imgs" alt="internet-3" src="../assets/internet3.png" />
                 <img class="imgs" alt="internet-4" src="../assets/internet4.png" />
+            </div>
+            <div class="description bold">
+                Iteration 2
+            </div>
+            <div class="img-sections">
+                <img class="imgs" alt="internet-1" src="../assets/data1.PNG" />
+                <img class="imgs" alt="internet-1" src="../assets/data2.PNG" />
+                <img class="imgs" alt="internet-1" src="../assets/data3.PNG" />
             </div>
         </div>
 
@@ -165,13 +176,13 @@ thoughts/concerns/comments
                 Information Systems is more prevalent than one might think or notice–it’s everywhere from smart thermometers to our laptops, to ordering food through DoorDash, to ordering concert tickets for Taylor Swift, and more. Data is everywhere–we live in the age of information, and IS is imperative in making that information accessible, secure, and malleable.
             </div>
             <div class="description">
-                The Internet Age is a website seeking to bridge the gap between Information Systems and society. If users don’t see a personal connection to a product or service, it’s hard to engage and fully receive the information. In order to bridge this gap, I’ve made one of the three parts of my website explain what IS is and how it manifests in everyday life. Thus, users can get a better understanding of why IS actually matters and how it applies to them.
+                The Data Age is a website seeking to bridge the gap between Information Systems and society. If users don’t see a personal connection to a product or service, it’s hard to engage and fully receive the information. In order to bridge this gap, I’ve made one of the three parts of my website explain what IS is and how it manifests in everyday life. Thus, users can get a better understanding of why IS actually matters and how it applies to them.
             </div>
             <div class="description">
                 The second component of my website addresses the user group (non-IS majors): it provides internship, research, and co-op opportunities that integrate IS with different industries. College students are always on the internship and career search grind. Any internship resource will attract the attention of students. People can filter by their own major or field of study (e.g. design, business, engineering, etc.) and find career-related opportunities that mix their interests with IS. A design student who previously may have wanted to work in product design or fashion design can now discover UI/UX and graphic design internships at companies. The third component addresses how IS can be used for social good. People can learn about how to get involved in IS-related opportunities, whether it be hackathons, community service, or more.
             </div>
             <div class="description">
-                Instead of having to dig through university websites, Google articles, and a rabbit hole to find the information they need and want, all the useful career-related information, educational information, informative hackathons, and volunteer opportunities are presented in a unified fashion. Non-IS students no longer have to sift through layers of information and websites to figure out future career opportunities, and by navigating to the site and finding internships they like, they’ll be more likely to click on the other tabs and learn about what IS actually is, and how it manifests in the news and their daily lives. In The Internet Age, it's imperative information is presented in an easily digestible and visually attractive format. Information Systems is everywhere, we just need to help people see that.
+                Instead of having to dig through university websites, Google articles, and a rabbit hole to find the information they need and want, all the useful career-related information, educational information, informative hackathons, and volunteer opportunities are presented in a unified fashion. Non-IS students no longer have to sift through layers of information and websites to figure out future career opportunities, and by navigating to the site and finding internships they like, they’ll be more likely to click on the other tabs and learn about what IS actually is, and how it manifests in the news and their daily lives. In The Data Age, it's imperative information is presented in an easily digestible and visually attractive format. Information Systems is everywhere, we just need to help people see that.
             </div>
         </div>
 
