--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -53,9 +53,9 @@
             </div>
          </section>
 
-         <div class="body-text"> 
-            <div class="video-embed">
-                <iframe width="728" height="409.5" src="https://www.youtube.com/embed/rhHavSdX7ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         <div class="body-text-big"> 
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/rhHavSdX7ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
          </div>
 
