--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="projects.css">
-        <script defer src="js/app.js"></script>
+        <script defer src="../js/app.js"></script>
 
     </head>
     <body>
@@ -55,9 +55,9 @@
 
         <div class="body-text"> 
             <div class="img-sections">
-                <img class="imgs small-img" alt="japanese-garden" src="../assets/google-oregon.jpg" />
-                <img class="imgs small-img" alt="yosemite" src="../assets/yosemite.jpg" />
-                <img class="imgs small-img" alt="point-lobos" src="../assets/yt.jpg" /> 
+                <img class="imgs small-img" id = "img1" alt="japanese-garden" src="../assets/google-oregon.jpg" />
+                <img class="imgs small-img" id = "img2" alt="yosemite" src="../assets/yosemite.jpg" />
+                <img class="imgs small-img" id = "img3" alt="point-lobos" src="../assets/yt.jpg" /> 
             </div>
         </div>
 
