--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <script src="../node_modules/animejs/lib/anime.min.js"></script>
+        <!-- <script src="./node_modules/animejs/lib/anime.min.js"></script> -->
 
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="projects.css">
-        <script defer src="../js/app.js"></script>
+        <script defer src="../js/google.js"></script>
 
     </head>
     <body>
@@ -108,9 +110,9 @@
 
             <div class="body-text"> 
                 <div class="img-sections">
-                    <img class="imgs" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
-                    <img class="imgs" alt="yosemite" src="../assets/volleyball.jpg" />
-                    <img class="imgs" alt="point-lobos" src="../assets/point-lobo.jpg" />  
+                    <img class="imgs" id = "img4" alt="japanese-garden" src="../assets/japanese-garden.jpg" />
+                    <img class="imgs" id = "img5" alt="yosemite" src="../assets/volleyball.jpg" />
+                    <img class="imgs" id = "img6" alt="point-lobos" src="../assets/point-lobo.jpg" />  
                 </div>
             </div>
 
