updated responsive footer bar

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -108,40 +108,41 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="services">
                     <div class="services-list">
-                        <div class="proj" id = "proj4" >
+                        <div class="proj" id = "proj4"> 
                             <a href="projects/gaugeme.html">
-                                <img class="cap" alt="gauge-me" src="assets/gauge.png"  />
+                                <img class="cap" alt="google-ads" src="assets/gauge.png" />
                                 <div class = "overlay blur">
                                     <div class="proj-desc">
-                                    A project pitch proposing Gauge Me, a Slack add-on that allows employees to fill out
-                                    daily check-in forms, generating comprehensive reports for managers to montior overall
-                                    team well-being, in an effort to improve work-from-home environments.
+                                        Gauge Me, a proposed Slack add-on that improves employee wellbeing and mental health while working from home.
                                     </div>
                                 </div>
                             </a>
-                            <div class="title-text no-blur">Gauge Me</div>
+                            <div class="small-text no-blur">Gauge Me</div>
                         </div>
-                        <div class="proj" id = "proj5" >
+                        <div class="proj" id = "proj5"> 
                             <a href="projects/internet.html">
-                                <img class="cap" alt="jump" src="assets/internet1.png"  />
-                                <div class = "overlay blur"> A project centered around answering the question "What is IS? And why should people care?" This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience. </div>
+                                <img class="cap" alt="spotify-img" src="assets/data1.PNG" />
+                                <div class = "overlay blur">
+                                    <div class="proj-desc">
+                                        "What is IS? And why should people care?" This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience. 
+                                    </div>
+                                </div>
                             </a>
-                            <div class="small-text no-blur">The Internet Age: Connecting Technology and People</div>
+                            <div class="title-text no-blur">The Data Age</div>
                         </div>
                         <div class="proj" id = "proj6" >
                             <a href="projects/infosystems.html">
-                                <img class="cap" alt="infosystems-img" src="assets/IS.png" />
+                                <img class="cap" alt="IS-img" src="assets/IS.png" />
                                 <div class = "overlay blur">
                                     <div class="proj-desc">
-                                    Various posters, graphics, and other design mini-projects I've done as an
-                                    office assistant at the Information Systems Office at Carnegie Mellon University.
+                                        Various posters, graphics, and other design mini-projects I've done as an
+                                        office assistant at the Information Systems Office at Carnegie Mellon University.
                                     </div>
                                 </div>
                             </a>
-                            <div class="small-text no-blur">CMU IS: Graphic Design</div>
+                            <div class="title-text no-blur">CMU IS: Graphic Design</div>
                         </div>
                     </div>
                 </div>
@@ -176,6 +177,7 @@
                             <img class="icon" alt="star-icon" src="assets/star.png" />
                         </div>
                     </div>
+                </div>
 
             </div>
         </section>
