--- a/portfolio/about/about.html
+++ b/portfolio/about/about.html
@@ -48,7 +48,7 @@
                      </div>
                      <div class="desc">
                          <img class="icon" alt="group-icon" src="../assets/group.png" />
-                         <div class="date">Sophomore at Carnegie Mellon University
+                         <div class="date"> friend, adventure-seeker, dog-lover, human
                      </div>
                  </div>
             </div>
@@ -68,8 +68,8 @@
                 </div>
 
                 <div class="collage-right">
-                    <div class="abt-desc pad-text">
-                        Hi, nice to meet you! :) My name is Huarui Lai and I'm a thoughtful, creative, and adventurous 19-year-old studying Information Systems and Human-Computer Interaction at Carnegie Mellon University.
+                    <div class="abt-desc ">
+                        Hi, nice to meet you! :) My name is Huarui Lai and I'm a thoughtful, creative, and adventurous sophomore studying Information Systems and Human-Computer Interaction at Carnegie Mellon University.
                     </div>
                 </div>
                 
@@ -80,7 +80,7 @@
 
             <div class="collage">
                 <div class="collage-right">
-                    <div class="abt-desc pad-text">
+                    <div class="abt-desc ">
                         I was born in Sweden, and raised in Portland, OR and Denver, CO. In my free time,
                         I'm probably planning my next adventure--whether it be a workaway opportunity, a solo trip, or simply, a vacation. Some of my most recent trips include Panama, Germany, and Morocco!
                     </div>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="collage-right">
-                    <div class="abt-desc pad-text">
+                    <div class="abt-desc ">
                         Outside of traveling, I'm probably either practicing my videography skills with my DJI Mini 2 drone and making Instagram reels on my video diary page <a href="https://www.instagram.com/starfruit.shots/?igshid=NDk5N2NlZjQ%3D" target="_blank" class="green-font">@starfruit.shots</a>, cooking or finding the next best food place to try, or hanging out with friends! 
                     </div>
                 </div>
@@ -122,7 +122,7 @@
 
             <div class="collage">
                 <div class="collage-right">
-                    <div class="abt-desc pad-text">
+                    <div class="abt-desc ">
                         At CMU, I'm deeply involved in Asian Students Association, the largest student cultural organization on campus, as the VP of Membership this year. You can probably find me getting pied on the face on a random Wednesday, running from streams of water in ASAssins, or building an award-winning ASA booth house in the Spring for CMU's Carnival!
                     </div>
                 </div>
@@ -140,37 +140,37 @@
             </div>
 
 
-        <div class="footer">
-            <div class="container">
-                <div class="services-list">
-                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
-                        <img class="icon" alt="mail-icon" src="../assets/plane.png" />
-                        <div class="small-text">
-                            <p>huarui.lai@gmail.com</p>
-                        </div>
-                    </a>
-                    <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                        <img class="icon" alt="github-icon" src="../assets/github.png" />
-                        <div class="small-text">
-                            <p>hlai1</p>
-                        </div>
-                    </a>
-                    <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                        <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
-                        <div class="small-text">
-                            <p>Huarui Lai</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="contact center">
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
-                    <div class="small-text">   
-                        <p>made by Huarui Lai</p>
+            <div class="footer">
+                <div class="container">
+                    <div class="services-list-1">
+                        <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                            <img class="icon" alt="mail-icon" src="../assets/plane.png" />
+                            <div class="small-text">
+                                <div class="username">huarui.lai@gmail.com</div>
+                            </div>
+                        </a>
+                        <a class="contact" href = "https://github.com/hlai1" target="_blank">
+                            <img class="icon" alt="github-icon" src="../assets/github.png" />
+                            <div class="small-text">
+                                <div class="username">hlai1</div>
+                            </div>
+                        </a>
+                        <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
+                            <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
+                            <div class="small-text">
+                                <div class="username">Huarui Lai</div>
+                            </div>
+                        </a>
                     </div>
-                    <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    <div class="contact center">
+                        <img class="icon" alt="star-icon" src="../assets/star.png" />
+                        <div class="small-text">   
+                            <div class="username-1">made by Huarui Lai</div>
+                        </div>
+                        <img class="icon" alt="star-icon" src="../assets/star.png" />
+                    </div>
                 </div>
             </div>
-        </div>
 
     </body>
 </html>
