updated footer bar

--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -284,34 +284,35 @@ thoughts/concerns/comments
 
         <div class="footer">
             <div class="container">
-                <div class="services-list">
+                <div class="services-list-1">
                     <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="../assets/plane.png" />
                         <div class="small-text">
-                            <p>huarui.lai@gmail.com</p>
+                            <div class="username">huarui.lai@gmail.com</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://github.com/hlai1" target="_blank">
                         <img class="icon" alt="github-icon" src="../assets/github.png" />
                         <div class="small-text">
-                            <p>hlai1</p>
+                            <div class="username">hlai1</div>
                         </div>
                     </a>
                     <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
                         <img class="icon" alt="linkedin-icon" src="../assets/linkedin.png" />
                         <div class="small-text">
-                            <p>Huarui Lai</p>
+                            <div class="username">Huarui Lai</div>
                         </div>
                     </a>
                 </div>
                 <div class="contact center">
                     <img class="icon" alt="star-icon" src="../assets/star.png" />
                     <div class="small-text">   
-                        <p>made by Huarui Lai</p>
+                        <div class="username-1">made by Huarui Lai</div>
                     </div>
                     <img class="icon" alt="star-icon" src="../assets/star.png" />
                 </div>
             </div>
+        </div>
 
     </body>
 </html>
