--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -106,6 +106,7 @@
                             </a>
                             <div class="title-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
+                        
                     </div>
                 </div>
                 <div class="services">
@@ -125,8 +126,11 @@
                             <a href="projects/internet.html">
                                 <img class="cap" alt="spotify-img" src="assets/data1.PNG" />
                                 <div class = "overlay blur">
-                                    <div class="proj-desc">
-                                        "What is IS? And why should people care?" This project integrates design principles such as color theory, typography, and complementary meaning to create an effective visual experience. 
+                                    <div class="long">
+                                        "What is IS? Why should people care?" This project integrates design principles such as color theory, typography, and contrast to create an effective visual experience. 
+                                    </div>
+                                    <div class="short">
+                                        "What is IS? Why should people care?" This project integrates color theory, typography, and contrast to create an effective visual experience. 
                                     </div>
                                 </div>
                             </a>
@@ -137,8 +141,7 @@
                                 <img class="cap" alt="IS-img" src="assets/IS.png" />
                                 <div class = "overlay blur">
                                     <div class="proj-desc">
-                                        Various posters, graphics, and other design mini-projects I've done as an
-                                        office assistant at the Information Systems Office at Carnegie Mellon University.
+                                        Various posters and graphic I've designed as an office assistant for the Information Systems Office at Carnegie Mellon University.
                                     </div>
                                 </div>
                             </a>
