updating flexbox layout on main page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
         <section class="spacing">
             <div class="parent-flex nav-bar">
                 <div class="flex-item-left">
-                    <div class="section-header">Huarui Lai</div>
+                    <div class="section-header-1">Huarui Lai</div>
                     <div class="body-text">Hi! I’m an aspiring <span class="green-font">UI/UX designer</span>
                      and current sophomore at Carnegie Mellon University studying 
                      <span class="green-font">Information Systems</span> and 
@@ -58,7 +58,8 @@
                      Welcome to my design portfolio.</div>
                 </div>
                 <div class="flex-item-right">
-                    <img class="cap" alt="jump" src="assets/cap.jpg" />
+                    <image class="cap" src="assets/airplane.GIF" />
+                    <!-- <img class="cap" alt="jump" src="assets/cap.jpg" /> -->
                 </div>
             </div>
         </section>
@@ -106,11 +107,6 @@
                             </a>
                             <div class="title-text no-blur">Pamela's Diner Redesigned Website</div>
                         </div>
-                        
-                    </div>
-                </div>
-                <div class="services">
-                    <div class="services-list">
                         <div class="proj" id = "proj4"> 
                             <a href="projects/gaugeme.html">
                                 <img class="cap" alt="google-ads" src="assets/gauge.png" />
